[package]
name = "wordle"
version = "0.1.0"
authors = ["Emma Britton <emmabritton@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/emmabritton/wordle"
description = "Wordle clone"
publish = false

[dependencies]
pixels-graphics-lib = { version = "0.19.1", default-features = false, features = ["serde", "scenes", "sound", "controller"] }
log = "0.4.18"
pretty_env_logger = "0.5.0"
anyhow = "1.0.86"
rand = "0.8.5"